--- a/app/package.json
+++ b/app/package.json
@@ -90,6 +90,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.18",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "gts": "^3.1.0",
     "typescript": "^4.0.3"
   }
