--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "licence": "AGPL-3.0-only",
     "workspaces": [
         "api",
-        "app",
-        "docs"
+        "app"
     ],
     "//": "Engines & Scripts are below for Heroku only, they serve no other purpose",
     "engines": {
