--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@ionic/react-router": "^6.0.1",
     "axios": "^0.24.0",
     "ionicons": "^5.4.0",
+    "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -79,6 +80,7 @@
     "@testing-library/user-event": "^12.6.3",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
+    "@types/luxon": "^2.0.8",
     "@types/node": "^14.11.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
