Only support scanning on mobile and add location switching

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@capacitor/app": "^4.0.0",
     "@capacitor/browser": "^4.0.0",
     "@capacitor/core": "^4.0.0",
+    "@capacitor/dialog": "^4.1.0",
     "@capacitor/haptics": "^4.0.0",
     "@capacitor/keyboard": "^4.0.0",
     "@capacitor/preferences": "^4.0.2",
