--- a/app/package.json
+++ b/app/package.json
@@ -7,21 +7,24 @@
   "licence": "AGPL-3.0-only",
   "repository": "https://github.com/Jbithell/adam-rms.git",
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^3.0.1",
     "@capacitor-community/http": "^1.4.1",
-    "@capacitor/android": "^3.6.0",
-    "@capacitor/app": "1.0.3",
-    "@capacitor/browser": "^1.0.6",
-    "@capacitor/core": "^3.2.4",
-    "@capacitor/haptics": "1.1.0",
-    "@capacitor/keyboard": "1.1.0",
-    "@capacitor/status-bar": "1.0.3",
-    "@capacitor/storage": "^1.2.3",
+    "@capacitor/android": "^4.0.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/browser": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/dialog": "^4.1.0",
+    "@capacitor/haptics": "^4.0.0",
+    "@capacitor/keyboard": "^4.0.0",
+    "@capacitor/preferences": "^4.0.2",
+    "@capacitor/status-bar": "^4.0.0",
+    "@ericblade/quagga2": "^1.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@ionic/react": "^6.3.1",
+    "@ionic/react": "^6.4.1",
     "@ionic/react-router": "^6.3.1",
     "axios": "^0.24.0",
     "ionicons": "^5.4.0",
@@ -75,7 +78,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "^3.2.4",
+    "@capacitor/cli": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
