--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "adam-rms-app-v2",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "description": "Rental Management System for Theatre, AV & Broadcast",
   "main": "node_modules/expo/AppEntry.js",
-  "author": {
-    "name": "RNE"
-  },
+  "author": "Bithell Studios Ltd",
   "keywords": [
     "react-native",
     "react-native-elements",
@@ -16,23 +15,58 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "dependencies": {
-    "expo": "^47.0.12",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "4.0.0-rc.7",
-    "@rneui/themed": "4.0.0-rc.7"
+    "@rneui/themed": "4.0.0-rc.7",
+    "axios": "^1.3.4",
+    "axios-hooks": "^4.0.0",
+    "expo": "~48.0.9",
+    "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
+    "expo-image": "~1.0.0",
+    "expo-linking": "~4.0.1",
+    "expo-random": "~13.1.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
+  },
+  "overrides": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@types/react": "^18.0.31",
+    "@types/react-native": "^0.71.5",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.8.7",
+    "typescript": "~4.9.4"
   },
   "private": true
 }
