--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "bundler": "webpack"
     },
     "extra": {
       "eas": {
