--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     ]
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@capacitor/dialog": "^4.1.0",
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -44,13 +47,15 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "setimmediate": "^1.0.5",
+    "@expo/webpack-config": "^18.0.1"
   },
   "overrides": {
     "metro": "0.76.0",
