--- a/package.json
+++ b/package.json
@@ -29,34 +29,42 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@capacitor/dialog": "^4.1.0",
     "@expo/react-native-action-sheet": "^4.0.1",
+    "@expo/webpack-config": "^18.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@rneui/base": "4.0.0-rc.7",
-    "@rneui/themed": "4.0.0-rc.7",
     "axios": "^1.3.4",
     "axios-hooks": "^4.0.0",
     "expo": "~48.0.9",
     "expo-auth-session": "~4.0.3",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-constants": "~14.2.1",
     "expo-image": "~1.0.0",
     "expo-linking": "~4.0.1",
     "expo-random": "~13.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "luxon": "^3.3.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-render-html": "^6.3.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "setimmediate": "^1.0.5",
-    "@expo/webpack-config": "^18.0.1",
-    "expo-barcode-scanner": "~12.3.2"
+    "styled-components": "^5.3.9"
   },
   "overrides": {
     "metro": "0.76.0",
@@ -64,8 +72,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.31",
     "@types/react-native": "^0.71.5",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
