--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
+    "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-render-html": "^6.3.4",
