--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -29,4 +29,4 @@ jobs:
         run: npm install
 
       - name: 🚀 Create update
-        run: eas build --non-interactive
+        run: eas build --non-interactive --platform all
