--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@capacitor/dialog": "^4.1.0",
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "^18.0.4",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -36,12 +36,13 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "axios": "^1.3.4",
+    "axios": "^1.3.6",
     "axios-hooks": "^4.0.0",
     "expo": "~48.0.9",
     "expo-auth-session": "~4.0.3",
     "expo-barcode-scanner": "~12.3.2",
     "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
     "expo-image": "~1.0.0",
     "expo-linking": "~4.0.1",
     "expo-random": "~13.1.1",
@@ -61,24 +62,23 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "^0.18.12",
     "setimmediate": "^1.0.5",
-    "styled-components": "^5.3.9",
-    "expo-device": "~5.2.1"
+    "styled-components": "^5.3.9"
   },
   "overrides": {
     "metro": "0.76.0",
     "metro-resolver": "0.76.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.21.4",
     "@types/luxon": "^3.3.0",
-    "@types/react": "^18.0.31",
-    "@types/react-native": "^0.71.5",
+    "@types/react": "^18.0.38",
+    "@types/react-native": "^0.71.6",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "eslint": "^8.37.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
