--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -12,7 +12,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages-production"
+  group: ${{ github.workflow }}
   cancel-in-progress: true
 
 jobs:
