--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 3.10.0"
+    "version": ">= 3.10.0",
+    "promptToConfigurePushNotifications": false
   },
   "build": {
     "development": {
