--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "adam-rms-app-v2",
-  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "description": "Rental Management System for Theatre, AV & Broadcast",
   "author": "Bithell Studios Ltd",
@@ -64,7 +63,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
     "setimmediate": "^1.0.5",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "expo-build-properties": "~0.6.0"
   },
   "overrides": {
     "metro": "0.76.0",
@@ -84,5 +84,6 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "2.8.7",
     "typescript": "~4.9.4"
-  }
+  },
+  "homepage": "/app-v2"
 }
