--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "axios-hooks": "^4.0.0",
-    "expo": "~48.0.9",
-    "expo-auth-session": "~4.0.3",
-    "expo-barcode-scanner": "~12.3.2",
-    "expo-constants": "~14.2.1",
-    "expo-device": "~5.2.1",
-    "expo-image": "~1.0.0",
-    "expo-linking": "~4.0.1",
-    "expo-random": "~13.1.1",
-    "expo-secure-store": "~12.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^48.0.11",
+    "expo-auth-session": "^4.0.3",
+    "expo-barcode-scanner": "^12.3.2",
+    "expo-build-properties": "^0.6.0",
+    "expo-constants": "^14.2.1",
+    "expo-device": "^5.2.1",
+    "expo-image": "^1.2.1",
+    "expo-linking": "^4.0.1",
+    "expo-random": "^13.1.1",
+    "expo-secure-store": "^12.1.1",
+    "expo-status-bar": "^1.4.4",
     "luxon": "^3.3.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
@@ -54,17 +55,16 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-collapsible": "^1.6.1",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.16.0",
     "react-native-render-html": "^6.3.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
     "setimmediate": "^1.0.5",
-    "styled-components": "^5.3.9",
-    "expo-build-properties": "~0.6.0"
+    "styled-components": "^5.3.9"
   },
   "overrides": {
     "metro": "0.76.0",
@@ -83,7 +83,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "2.8.7",
-    "typescript": "~4.9.4"
+    "typescript": "^4.9.5"
   },
   "homepage": "/app-v2"
 }
