--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-native": "0.71.6",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^2.16.0",
+    "react-native-reanimated": "~2.14.0",
     "react-native-render-html": "^6.3.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
