--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@capacitor/dialog": "^4.1.0",
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@expo/webpack-config": "^18.0.4",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -35,9 +33,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
-    "axios-hooks": "^4.0.0",
     "expo": "^48.0.11",
-    "expo-auth-session": "^4.0.3",
     "expo-barcode-scanner": "^12.3.2",
     "expo-build-properties": "^0.6.0",
     "expo-constants": "^14.2.1",
@@ -58,13 +54,11 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.14.0",
     "react-native-render-html": "^6.3.4",
-    "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
-    "setimmediate": "^1.0.5",
-    "styled-components": "^5.3.9"
+    "setimmediate": "^1.0.5"
   },
   "overrides": {
     "@expo/config-plugins": "~6.0.0"
