--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-random": "^13.1.1",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "^1.4.4",
+    "jwt-decode": "^3.1.2",
     "luxon": "^3.3.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
