Update eas update & workflow to be more descriptive

--- a/eas.json
+++ b/eas.json
@@ -10,21 +10,23 @@
       "ios": {
         "resourceClass": "m-medium",
         "image": "latest"
-      }
+      },
+      "channel": "development"
     },
     "preview": {
       "distribution": "internal",
       "ios": {
         "resourceClass": "m-medium",
         "image": "latest"
-      }
+      },
+      "channel": "preview"
     },
     "production": {
       "ios": {
         "resourceClass": "m-medium",
         "image": "latest"
-
-      }
+      },
+      "channel": "production"
     }
   },
   "submit": {
