--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "expo-updates": "~0.16.4"
   },
   "overrides": {
     "@expo/config-plugins": "~6.0.0"
