--- a/.github/workflows/expo-update.yml
+++ b/.github/workflows/expo-update.yml
@@ -43,3 +43,15 @@ jobs:
         uses: expo/expo-github-action/preview@v8
         with:
           command: eas update --branch main --message "${{github.event.pull_request.title}}" --json --non-interactive
+          
+      - name: 🧹 Remove Expo Branch
+        continue-on-error: true
+        uses: expo/expo-github-action/preview@v8
+        with: 
+          command: eas branch:delete ${{github.event.pull_request.head.ref}} --json --non-interactive
+          
+      - name: 🧹 Remove Expo Channel
+        continue-on-error: true
+        uses: expo/expo-github-action/preview@v8
+        with:
+          command: eas channel:delete  ${{github.event.pull_request.head.ref}} --json --non-interactive
