--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "expo": "^48.0.11",
     "expo-barcode-scanner": "^12.3.2",
     "expo-build-properties": "^0.6.0",
-    "expo-constants": "^14.2.1",
-    "expo-device": "^5.2.1",
+    "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
     "expo-image": "~1.0.0",
     "expo-linking": "^4.0.1",
     "expo-permissions": "^14.1.1",
@@ -60,7 +60,10 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
     "setimmediate": "^1.0.5",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "sentry-expo": "~6.1.0",
+    "expo-application": "~5.1.1",
+    "@sentry/react-native": "4.13.0"
   },
   "overrides": {
     "@expo/config-plugins": "~6.0.0"
