--- a/app.json
+++ b/app.json
@@ -65,7 +65,11 @@
     "hooks": {
       "postPublish": [
         {
-          "file": "sentry-expo/upload-sourcemaps"
+          "file": "sentry-expo/upload-sourcemaps",
+          "config": {
+            "organization": "jbithell",
+            "project": "adamrms"
+          }
         }
       ]
     }
