--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -34,6 +33,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "expo": "^48.0.11",
+    "expo-application": "~5.1.1",
     "expo-barcode-scanner": "^12.3.2",
     "expo-build-properties": "^0.6.0",
     "expo-constants": "~14.2.1",
@@ -44,6 +44,7 @@
     "expo-random": "^13.1.1",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "^1.4.4",
+    "expo-updates": "~0.16.4",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.3.0",
     "native-base": "^3.4.28",
@@ -59,11 +60,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
-    "setimmediate": "^1.0.5",
-    "expo-updates": "~0.16.4",
     "sentry-expo": "~6.2.0",
-    "expo-application": "~5.1.1",
-    "@sentry/react-native": "4.15.2"
+    "setimmediate": "^1.0.5"
   },
   "overrides": {
     "@expo/config-plugins": "~6.0.0"
